<resources>
    <string name="app_name">Cinema Gallery</string>
    <string name="desc1">Over many missions and against impossible odds, Dom Toretto and his family have outsmarted and outdriven every foe in their path. Now, they must confront the most lethal opponent they have ever faced. Fueled by revenge, a terrifying threat emerges from the shadows of the past to shatter Doms world and destroy everything and everyone he loves.</string>
    <string name="desc2">John Wick is a 2014 American action thriller film directed by Chad Stahelski and written by Derek Kolstad. Keanu Reeves stars as John Wick, a legendary hitman who comes out of retirement to seek revenge against the men who killed his puppy, a final gift from his recently deceased wife. The film also stars Michael Nyqvist, Alfie Allen, Adrianne Palicki, Bridget Moynahan, Dean Winters, Ian McShane, John Leguizamo, and Willem Dafoe.Kolstads script drew on his interest in action, revenge, and neo noir films. Producer Basil Iwanyk purchased the rights as his first independent film production. Reeves, whose career was declining, liked the script and recommended that the experienced stunt choreographers Stahelski and David Leitch direct the action scenes; Stahelski and Leitch successfully lobbied to co-direct the project. Principal photography began in October 2013, on a $20–$30 million budget. Stahelski and Leitch focused on highly choreographed and long single takes to convey action, eschewing the rapid cuts and closeup shots of contemporary action films.</string>
    <string name="desc3"> The Super Mario Bros. Movie is a 2023 American computer-animated adventure comedy film based on Nintendos Mario video game franchise. Produced by Universal Pictures, Illumination, and Nintendo, and distributed by Universal, it was directed by Aaron Horvath and Michael Jelenic and written by Matthew Fogel. The ensemble voice cast includes Chris Pratt, Anya Taylor-Joy, Charlie Day, Jack Black, Keegan-Michael Key, Seth Rogen, and Fred Armisen. The film features an origin story for the brothers Mario and Luigi, Italian-American plumbers who are transported to an alternate world and become entangled in a battle between the Mushroom Kingdom, led by Princess Peach, and the Koopas, led by Bowser.</string>
    <string name="desc4"> Avatar: The Way of Water is a 2022 American epic science fiction film co-produced and directed by James Cameron, who co-wrote the screenplay with Rick Jaffa and Amanda Silver from a story the trio wrote with Josh Friedman and Shane Salerno. Distributed by 20th Century Studios, it is the sequel to Avatar (2009) and the second installment in the Avatar film series. Cast members Sam Worthington, Zoe Saldaña, Stephen Lang, Joel David Moore, CCH Pounder, Giovanni Ribisi, Dileep Rao, and Matt Gerald reprise their roles from the original film, with Sigourney Weaver returning in an additional role[6] while Kate Winslet joined the cast. It follows a blue-skinned humanoid Navi named Jake Sully (Worthington) as he and his family, under renewed human threat, seek refuge with the aquatic Metkayina clan of Pandora, a habitable exomoon on which they live.</string>
    <string name="desc5"> Guardians of the Galaxy Vol. 3 (stylized in marketing as Guardians of the Galaxy Volume 3) is a 2023 American superhero film based on the Marvel Comics superhero team Guardians of the Galaxy, produced by Marvel Studios, and distributed by Walt Disney Studios Motion Pictures. It is the sequel to Guardians of the Galaxy (2014) and Guardians of the Galaxy Vol. 2 (2017), and the 32nd film in the Marvel Cinematic Universe (MCU). Written and directed by James Gunn, it features an ensemble cast including Chris Pratt, Zoe Saldaña, Dave Bautista, Karen Gillan, Pom Klementieff, Vin Diesel, Bradley Cooper, Will Poulter, Sean Gunn, Chukwudi Iwuji, Linda Cardellini, Nathan Fillion, and Sylvester Stallone. In the film, the Guardians embark on a mission to protect Rocket (Cooper) from the High Evolutionary (Iwuji).</string>
    <string name="desc6"> Ant-Man and the Wasp: Quantumania is a 2023 American superhero film based on Marvel Comics featuring the characters Scott Lang / Ant-Man and Hope Pym / Wasp. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is the sequel to Ant-Man (2015) and Ant-Man and the Wasp (2018) and the 31st film in the Marvel Cinematic Universe (MCU). It was directed by Peyton Reed, written by Jeff Loveness, and stars Paul Rudd as Scott Lang and Evangeline Lilly as Hope van Dyne, alongside Jonathan Majors, Kathryn Newton, David Dastmalchian, Katy OBrian, William Jackson Harper, Bill Murray, Michelle Pfeiffer, Corey Stoll, and Michael Douglas. In the film, Lang, Van Dyne, and their family are accidentally transported to the Quantum Realm and face off against Kang the Conqueror (Majors).</string>
    <string name="desc7"> In 1987, Father Gabriele Amorth, the Popes personal exorcist, an earthy, scooter-riding, humorous, practical man, visits an Italian village where a man is seemingly possessed by a demon. With the local priest, Amorth enters the room where the man is tied up. While exorcising him, using a Saint Benedict Medal sacramental, Amorth taunts the demon, challenging it to possess a pig; when it does, the pig is killed with a shotgun.This incident gets Amorth in trouble with a Church tribunal, since he acted without permission from superiors. One tribunal member is a friendly African Bishop, Lumumba, but another is a vicious American Cardinal, Sullivan, skeptical of demonic possession. Amorth replies that evil does exist and that he did not perform an actual exorcism but rather, some psychological theater to help the mentally-ill man. Disgusted, Amorth walks out of the tribunal.</string>
    <string name="desc8">To Catch a Killer is a 2023 American crime thriller film directed by Damián Szifron and written by Szifron and Jonathan Wakeham. It stars Shailene Woodley, Ben Mendelsohn, Jovan Adepo and Ralph Ineson. In the film, a talented but troubled young Baltimore cop is recruited by the FBI to help profile and track down a murderer. The film marks Szifrons English-language debut Vertical Entertainment gave it a limited theatrical release on April 21, 2023, and it received mixed reviews from critics.</string>
    <string name="desc9">Transformers: Age of Extinction is a 2014 science fiction action film based on Hasbros Transformers toy line. It is the sequel to Transformers: Dark of the Moon (2011) and the fourth installment in the Transformers film series. Like its predecessor, the film is directed by Michael Bay and written by Ehren Kruger. It stars Mark Wahlberg, Stanley Tucci, Kelsey Grammer, Nicola Peltz, Jack Reynor, Sophia Myles, Bingbing Li, Titus Welliver and T.J. Miller. It does not feature the original human cast from the previous three films, and instead introduces a new human cast and many new Transformers, including the Dinobots. A struggling inventor and single-father discovers a damaged truck, which turns out to be a Transformer in disguise.</string>
    <string name="desc10">Puss in Boots: The Last Wish is a 2022 American computer-animated adventure comedy film produced by DreamWorks Animation and distributed by Universal Pictures. The sequel to the spin-off film Puss in Boots (2011) and the sixth installment in the Shrek franchise, the film was directed by Joel Crawford and co-directed by Januel Mercado. Based on the character from Shrek 2 (2004) and inspired by the eponymous fairy tale, the films screenplay was written by Paul Fisher and Tommy Swerdlow, with a story by Swerdlow and Tom Wheeler. The voice cast of Puss in Boots: The Last Wish includes Antonio Banderas and Salma Hayek Pinault reprising their respective roles as the titular character and Kitty Softpaws, and they are joined by Harvey Guillén, Florence Pugh, Olivia Colman, Ray Winstone, Samson Kayo, John Mulaney, Wagner Moura, DaVine Joy Randolph, and Anthony Mendez, who play the new characters introduced in the film. In the film, Puss in Boots teams up with Kitty and Perrito (Guillén) to find the mystical Last Wish for the Wishing Star to restore the first eight of his nine lives, before Goldilocks and her Three Bears Crime Family (Pugh, Winstone, Colman, and Kayo), and "Big" Jack Horner (Mulaney) do, while attempting to avoid a mysterious hooded wolf (Moura) who is hunting down Puss.</string>
    <string name="desc11">Black Panther: Wakanda Forever is a 2022 American superhero film based on Marvel Comics featuring the character Shuri / Black Panther. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is the sequel to Black Panther (2018) and the 30th film in the Marvel Cinematic Universe (MCU). Directed by Ryan Coogler, who co-wrote the screenplay with Joe Robert Cole, the film stars Letitia Wright as Shuri / Black Panther, alongside Lupita Nyong o, Danai Gurira, Winston Duke, Florence Kasumba, Dominique Thorne, Michaela Coel, Mabel Cadena, Tenoch Huerta Mejía, Martin Freeman, Julia Louis-Dreyfus, and Angela Bassett. In the film, the leaders of Wakanda fight to protect their nation in the wake of King TChallas death.</string>
    <string name="title1">Fast X</string>
    <string name="title2">John Wick</string>
    <string name="title3">The Super Mario Bros. Movie</string>
    <string name="title4">Avatar: The Way of Water</string>
    <string name="title5">"Guardians of the Galaxy Vol. 3"</string>
    <string name="title6">Ant-Man and the Wasp: Quantumania</string>
    <string name="title7">The Popes Exorcist</string>
    <string name="title8">To Catch a Killer</string>
    <string name="title9">Transformers: Age of Extinction</string>
    <string name="title10">Puss in Boots: The Last Wish</string>
    <string name="title11">Black Panther: Wakanda Forever</string>
    <string name="image1">https://image.tmdb.org/t/p/w500/fiVW06jE7z9YnO4trhaMEdclSiC.jpg</string>
    <string name="image2">https://image.tmdb.org/t/p/w500/vZloFAK7NmvMGKE7VkF5UHaz0I.jpg</string>
    <string name="image3">https://image.tmdb.org/t/p/w500/qNBAXBIQlnOThrVvA6mA2B5ggV6.jpg</string>
    <string name="image4">https://image.tmdb.org/t/p/w500/t6HIqrRAclMCA60NsSmeqe9RmNV.jpg</string>
    <string name="image5">https://image.tmdb.org/t/p/w500/nAbpLidFdbbi3efFQKMPQJkaZ1r.jpg</string>
    <string name="image6">https://image.tmdb.org/t/p/w500/g0OWGM7HoIt866Lu7yKohYO31NU.jpg</string>
    <string name="image7">https://image.tmdb.org/t/p/w500/gNPqcv1tAifbN7PRNgqpzY8sEJZ.jpg</string>
    <string name="image8">https://image.tmdb.org/t/p/w500/mFp3l4lZg1NSEsyxKrdi0rNK8r1.jpg</string>
    <string name="image9">https://image.tmdb.org/t/p/w500/jyzrfx2WaeY60kYZpPYepSjGz4S.jpg</string>
    <string name="image10">https://image.tmdb.org/t/p/w500/kuf6dutpsT0vSVehic3EZIqkOBt.jpg</string>
    <string name="image11">https://image.tmdb.org/t/p/w500/sv1xJUazXeYqALzczSZ3O6nkH75.jpg</string>

    <string name="profile_name">ALFI ZIA ULHAQ</string>
    <string name="profile_email">alfiziaulhaq@gmail.com</string>
    <string name="searchbar">search cinema</string>
    <string name="profile_top">My profile</string>
    <string name="cart_top">Booking Movie Ticket </string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="required_point">Rp %d ,-</string>
    <string name="price">Price = Rp %d ,-</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </string>
    <string name="minus_symbol">—</string>
    <string name="plus_symbol">＋</string>
    <string name="add_to_cart">Add to cart : Rp %d ,-</string>
    <string name="total_order">Total Booking : Rp %d ,-</string>
    <string name="back">Back</string>
    <string name="dicoding_reward">Booking Ticket</string>
    <string name="share_message">Hey, I have booking %1$d movies in AlfiCinemaCompose with total Rp %2$d ,- .Do you want too?</string>
    <string name="title_activity_landing">LandingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>