...
    viewModel.search(query)
    LazyVerticalGrid(
        columns = GridCells.Adaptive(160.dp),
        contentPadding = PaddingValues(16.dp),
        horizontalArrangement = Arrangement.spacedBy(16.dp),
        verticalArrangement = Arrangement.spacedBy(16.dp),
        modifier = modifier.testTag("CinemaList")
    ) {
        item {
            SearchBar(
                query = query,
                onQueryChange = viewModel::search,
            )}
...
